--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>ejemplo</title>
 </head>
 <body>
-    esto lo estoy cambiando
-    version 1.2
+    cambio numero 3
+    version 1.3
 </body>
 </html>
